--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>The Malgieri's</title>
 
+  <!-- Basic share metadata (no preview image) -->
+  <meta property="og:title" content="The Malgieri's" />
+  <meta property="og:description" content="Welcome to The Malgieri's family site!" />
+  <meta property="og:url" content="https://themalgieris.com" />
+
   <style>
     :root{
       --door-speed: 8000ms;
@@ -40,7 +45,7 @@
     /* Fullscreen image (fits fully, no cropping) */
     .reveal-image{
       width: 100%;
-      max-height: 85vh; /* keep some room for text */
+      max-height: 85vh;
       object-fit: contain;
       background-color: black;
       opacity: 0;
@@ -154,7 +159,6 @@
   </audio>
 
   <script>
-    const root  = document.documentElement;
     const body  = document.body;
     const begin = document.getElementById('begin');
     const music = document.getElementById('bg-music');
