--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>The Malgieri's</title>
 
-  <!-- Basic share metadata (no preview image) -->
+  <!-- Social share metadata -->
   <meta property="og:title" content="The Malgieri's" />
   <meta property="og:description" content="Welcome to The Malgieri's family site!" />
   <meta property="og:url" content="https://themalgieris.com" />
+  <meta property="og:image" content="https://themalgieris.com/new-preview.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta name="twitter:card" content="summary_large_image" />
 
   <style>
     :root{
