--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta property="og:title" content="The Malgieri's" />
   <meta property="og:description" content="Welcome to The Malgieri's family site!" />
   <meta property="og:url" content="https://themalgieris.com" />
-  <meta property="og:image" content="https://themalgieris.com/new-preview.png" />
+  <meta property="og:image" content="https://themalgieris.com/new-image.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta name="twitter:card" content="summary_large_image" />
@@ -191,3 +191,4 @@
   </script>
 </body>
 </html>
+
